--- a/index.html
+++ b/index.html
@@ -7,22 +7,39 @@
   <link rel="stylesheet" href="css/main.css"></link>
 </head>
 <body>
-  <div id="app">
-    <h1>Books Data</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Title</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr v-for="(book, index) in books" :key="index">
-          <td>{{ book.id }}</td>
-          <td>{{ book.title }}</td>
-        </tr>
-      </tbody>
-    </table>
+  <div id="app" class="app">
+    <div class="header">
+      <div v-for="(employee,index) in employees" :key="index">
+        <div class="empName">{{employee.user_name}}</div>
+        <div class="empDetail">
+          <div>{{employee.department}}</div>
+          <div>{{employee.year}}年目 {{employee.job}}</div>
+        </div>
+      </div>
+    </div>
+    <div class="main">
+      <table class="booksTable">
+          <tr class="tableHeader">
+            <th>タイトル</th>
+            <th>進捗状況</th>
+            <th>年次</th>
+            <th>職種</th>
+            <th>評価</th>
+            <th>コメント</th>
+          </tr>
+          <tr v-for="(book,index) in books" :key="index" v-on:click="handleRowClick(index)" class="tableMain">
+              <td>{{ book.title }}</td>
+              <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
+              <td>{{ book.year }}</td>
+              <td>{{ book.job }}</td>
+              <td>{{ book.star }}</td>
+              <td>{{ book.review }}</td>
+          </tr>    
+      </table>
+    </div>
+    <div class="footer">
+   
+    </div>
   </div>
   <script src ="js/main.js"></script>
 </body>
