jsonの構成変更

--- a/book.html
+++ b/book.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app" class="app">
     <button @click="returnTop(id)" class="return">戻る</button>
-    <h2> {{ book[0].title }}</h2>
+    <h2> {{ book.title }}</h2>
     <div class="bookData">
       <div class="detailHead">
         <p>著者</p>
@@ -28,12 +28,12 @@
         <p>:</p>
       </div>
       <div class="detail">
-        <p>{{ book[0].author }}</p>
-        <p>{{ book[0].publisher }}</p>
-        <p>{{ book[0].place }}</p>
-        <p>{{ book[0].genre }}</p>
-        <p>{{ book[0].url }}</p>
-        <p>{{ book[0].status }}</p>
+        <p>{{ book.author }}</p>
+        <p>{{ book.publisher }}</p>
+        <p>{{ book.place }}</p>
+        <p>{{ book.genre }}</p>
+        <p>{{ book.url }}</p>
+        <p>{{ book.status }}</p>
       </div>
     </div>
     <div  v-for="(comment, index) in comments" :key="index" class="comments">
@@ -45,7 +45,7 @@
         <tbody class="tbody">
           <tr>
             <td> 名前: {{ comment.user_name }}</td>
-            <td class="star"> 評価: {{ comment.star }}</td>
+            <td class="star"> 評価：☆{{ comment.star }}</td>
           </tr>
         </tbody>
       </table>
