マイページボタンのコメントアウト

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app" class="app">
     <div class="header">
       <div class="menuTab">
-        <button>マイページ</button>
+        <!-- <button>マイページ</button> -->
       </div>
       <div>
         <div class="empName">{{employee.user_name}}</div>
