目的：goalListを追加

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       </div>
     </div>
     <div class="main">
+      <!-- ↓v-forで回す予定 -->
+      <p>▼目的： {{ goals[0].goal }}</p>       
       <table class="booksTable">
           <tr class="tableHeader">
             <th>タイトル</th>
