目的の追記

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </div>
     </div>
     <div class="main">
+      <!-- <tr v-for="(goal,index) in goals" :key="index">
+        <td>目的：{{goal.goal_name}}</td>
+      </tr> -->
+      <p>目的：{{goals[0].goal}}</p>
       <table class="booksTable">
           <tr class="tableHeader">
             <th>タイトル</th>
