--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <div class="main">
       <!-- ↓v-forで回す予定 -->
-      <p>▼目的： {{ goals[0].goal }}</p>       
+      <!-- <div v-for="(goal,index1) in employee.goalList">
+      <p>■目的： {{ employee.goalList[index1].goal}}</p>     -->
       <table class="booksTable">
           <tr class="tableHeader">
             <th>タイトル</th>
@@ -32,15 +33,17 @@
             <th>評価☆</th>
             <th>コメント</th>
           </tr>
-          <tr v-for="(book,index) in books" :key="index" v-on:click="handleRowClick(index)" class="tableMain">
-              <td>{{ book.title }}</td>
-              <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
+          <tr v-for="(book,index) in employee.goalList[0].bookList" >
+          <!-- :key="index" v-on:click="handleRowClick(index)" class="tableMain"> -->
+              <td>{{ employee.goalList[0].bookList[index].title }}</td>
+              <!-- <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
               <td>{{ book.year }}</td>
               <td>{{ book.job }}</td>
               <td>{{ book.star }}</td>
-              <td>{{ book.review }}</td>
+              <td>{{ book.review }}</td> -->
           </tr>    
       </table>
+      </div>
     </div>
     <div class="footer">
    
