目的に合わせた本の表示の修正

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       </div>
     </div>
     <div class="main">
-      <!-- ↓v-forで回す予定 -->
-      <!-- <div v-for="(goal,index1) in employee.goalList">
-      <p>■目的： {{ employee.goalList[index1].goal}}</p>     -->
+      <div v-for="(goal,index1) in employee.goalList" :key="index1">
+      <p>■目的： {{ employee.goalList[index1].goal}}</p>    
       <table class="booksTable">
           <tr class="tableHeader">
             <th>タイトル</th>
@@ -33,14 +32,13 @@
             <th>評価☆</th>
             <th>コメント</th>
           </tr>
-          <tr v-for="(book,index) in employee.goalList[0].bookList" >
-          <!-- :key="index" v-on:click="handleRowClick(index)" class="tableMain"> -->
-              <td>{{ employee.goalList[0].bookList[index].title }}</td>
-              <!-- <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
+          <tr v-for="(book,index) in employee.goalList[index1].booksList"  :key="index" v-on:click="handleRowClick(book.id)" class="tableMain">
+              <td>{{ employee.goalList[index1].booksList[index].title }}</td>
+              <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
               <td>{{ book.year }}</td>
               <td>{{ book.job }}</td>
               <td>{{ book.star }}</td>
-              <td>{{ book.review }}</td> -->
+              <td>{{ book.review }}</td>
           </tr>    
       </table>
       </div>
