レビュアーから人に遷移

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="app" class="app">
+    <button @click="goBack()" class="return">戻る</button>
     <div class="header">
       <div class="menuTab">
         <!-- <button>マイページ</button> -->
