--- a/book.html
+++ b/book.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="book" class="app">
-    <button @click="returnTop(id)" class="return">戻る</button>
+    <button @click="goBack()" class="return">戻る</button>
     <h2> {{ book.title }}</h2>
     <div class="bookData">
       <div>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div>■レビュー</div>
-    <div  v-for="(comment, index) in comments" :key="index" class="comments">
+    <div  v-for="(comment, index) in comments" :key="index" v-on:click="handleRowClickEmp(comment.id)" class="comments">
       <table>
         <thead>
           <tr>
