--- a/book.html
+++ b/book.html
@@ -48,7 +48,7 @@
         </thead>
         <tbody class="tbody">
           <tr>
-            <td> 名前: {{ comment.user_name }}</td>
+            <td class="user_name"> 名前: {{ comment.user_name }}</td>
             <td class="star"> 評価：☆{{ comment.star }}</td>
           </tr>
         </tbody>
@@ -59,7 +59,7 @@
     <div  v-for="(chapter, index) in explanations" :key="index" >
       <p>・{{ chapter.chap_id }}章</p>
       <div v-for="(explanation, index1) in explanations[index].chap_explanations" :key="index1" 
-        v-on:click="handleRowClickEmp(explanation.id)" class="comments">
+         class="comments">
       <table>
         <thead>
           <tr>
@@ -67,7 +67,7 @@
         </thead>
         <tbody class="tbody">
           <tr>
-            <td>名前：{{explanation.user_name}}</td>
+            <td v-on:click="handleRowClickEmp(explanation.id)" class="user_name">名前：{{explanation.user_name}}</td>
           </tr>
         </tbody>
       </table>
