--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button>マイページ</button>
     </div>
     <div class="menuTab" v-on:click="handleRowClickAllEmp()">
-      <button>検索ページ</button>
+      <button>従業員検索ページ</button>
     </div>
     <div class="header">
       <div>
