--- a/employee.html
+++ b/employee.html
@@ -9,9 +9,7 @@
 <body>
   <div id="employee" class="app">
     <button @click="goBack()" class="return">戻る</button>
-    <div v-on:click="handleRowClickEmp(0)" class="menuTab">
-      <button>マイページ</button>
-    </div>
+    <button v-on:click="handleRowClickEmp(0)" class="menuTab">マイページ</button>
 
     <div>
         <p>職種</p>
