--- a/employee.html
+++ b/employee.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="utf-8">
   <title>Display Book Data Details in Table Using Vue.js CDN</title>
   <script src="https://cdn.jsdelivr.net/npm/vue@3.2.20/dist/vue.global.prod.js"></script>
-  <link rel="stylesheet" href="css/employee.css"></link>
+  <link rel="stylesheet" href="css/employee.css">
+  </link>
 </head>
+
 <body>
   <div id="employee" class="app">
     <!-- <button @click="goBack()" class="return">戻る</button> -->
     <button v-on:click="handleRowClickEmp(0)" class="menuTab">マイページ</button>
 
     <div>
-        <p class="jobType">職種</p>
-        <input type="checkbox" id="job1" v-model="selectedJobs" value="エンジニア">
-        <label for="job1">エンジニア</label>
-        <input type="checkbox" id="job2" v-model="selectedJobs" value="デザイナー">
-        <label for="job2">デザイナー</label>
-        <input type="checkbox" id="job3" v-model="selectedJobs" value="営業">
-        <label for="job3">営業</label>
+      <p class="jobType">職種</p>
+      <input type="checkbox" id="job1" v-model="selectedJobs" value="エンジニア">
+      <label for="job1">エンジニア</label>
+      <input type="checkbox" id="job2" v-model="selectedJobs" value="デザイナー">
+      <label for="job2">デザイナー</label>
+      <input type="checkbox" id="job3" v-model="selectedJobs" value="営業">
+      <label for="job3">営業</label>
     </div>
 
     <div>
       <label for="sortYear">From</label>
       <select id="sortYearFrom" v-model="fromYear">
-          <option value="">--</option>
-          <option v-for="year in availableYears" :value="year">{{ year }}</option>
+        <option value="">--</option>
+        <option v-for="year in availableYears" :value="year">{{ year }}</option>
       </select>
 
       <label for="sortYear">To</label>
       <select id="sortYearTo" v-model="toYear">
-          <option value="">--</option>
-          <option v-for="year in availableYears" :value="year">{{ year }}</option>
+        <option value="">--</option>
+        <option v-for="year in availableYears" :value="year">{{ year }}</option>
       </select>
     </div>
     <div>
       <button @click="searchEmployees" class="return">検索</button>
-  </div>
-    <div>
-        <table class="booksTable">
-            <tr class="tableHeader">
-              <th>氏名</th>
-              <th>職種</th>
-              <th>年次</th>
-              <th>読んだ本数</th>
-            </tr>
-            <tr v-for="(employee,index) in employees" :key="index" 
-            v-on:click="handleRowClickEmp(employee.id)" class="tableMain">
-                <td class="user_name">{{ employee.user_name }}</td>
-                <td>{{ employee.job }}</div></td>
-                <td>{{ employee.year }}</td>
-                <td>{{ employee.bookCount }}</td>
-            </tr>    
-        </table>
+      <button @click="clearFilters" class="return">クリア</button>
     </div>
+    <div>
+      <table class="booksTable">
+        <tr class="tableHeader">
+          <th>氏名</th>
+          <th>職種</th>
+          <th>年次</th>
+          <th>読んだ本数</th>
+        </tr>
+        <tr v-for="(employee,index) in employees" :key="index" v-on:click="handleRowClickEmp(employee.id)"
+          class="tableMain">
+          <td class="user_name">{{ employee.user_name }}</td>
+          <td>{{ employee.job }}
+    </div>
+    </td>
+    <td>{{ employee.year }}</td>
+    <td>{{ employee.bookCount }}</td>
+    </tr>
+    </table>
+  </div>
 
   </div>
-  <script src ="js/employee.js"></script>
+  <script src="js/employee.js"></script>
 </body>
+
 </html>
