book.html:発売日を追加、 employee.js:不要機能を削除、年次・職種で昇順に表示、年次検索時の逆転入力をエラーに

--- a/book.html
+++ b/book.html
@@ -20,6 +20,7 @@
         <p>著者</p>
         <p>ジャンル</p>
         <p>出版社</p>
+        <p>発売日</p>
         <p>場所</p>
         <p>URL</p>
         <p>ステータス</p>
@@ -31,11 +32,13 @@
         <p>:</p>
         <p>:</p>
         <p>:</p>
+        <p>:</p>
       </div>
       <div class="detail">
         <p>{{ book.author }}</p>
         <p>{{ book.genre }}</p>
         <p>{{ book.publisher }}</p>
+        <p>{{ book.date }}</p>
         <p>{{ book.place }}</p>
         <p>{{ book.url }}</p>
         <p>{{ book.status }}</p>
