--- a/book.html
+++ b/book.html
@@ -10,7 +10,7 @@
   <div id="book" class="app">
     <button @click="goBack()" class="return">戻る</button>
       <button v-on:click="handleRowClickEmp(0)" class="menuTab">マイページ</button>
-      <button v-on:click="handleRowClickAllEmp(0)" class="menuTab">従業員検索ページ</button>
+      <button v-on:click="handleRowClickAllEmp(0)" class="menuTab">社員検索ページ</button>
     <h2> {{ book.title }}</h2>
     <div class="bookData">
       <div>
