--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app" class="app">
     <button @click="goBack()" class="return">戻る</button>
     <button v-on:click="handleRowClickEmp(0)" class="menuTab">マイページ</button>
-    <button v-on:click="handleRowClickAllEmp(0)" class="menuTab">従業員検索ページ</button>
+    <button v-on:click="handleRowClickAllEmp(0)" class="menuTab">社員検索ページ</button>
   <div class="header">
       <div>
         <div class="empName">{{employee.user_name}}</div>
