--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
             <th>職種</th>
             <th>評価☆</th>
             <th>コメント</th>
+            <th v-if="employeeId === 0">削除</th>
           </tr>
-          <tr v-for="(book,index) in employee.goalList[index1].booksList"  :key="index" v-on:click="handleRowClick(book.id)" class="tableMain">
+          <tr v-for="(book,index) in employee.goalList[index1].booksList" :key="index" v-on:click="handleRowClick(book.id)" class="tableMain">
               <td>{{ book.title }}</td>
               <td><div class="bookStatus" :style="{backgroundColor: book.color}">{{ book.status }}</div></td>
               <td>{{ book.year }}</td>
               <td>{{ book.job }}</td>
               <td>{{ book.star }}</td>
               <td>{{ book.review }}</td>
-          </tr>    
+              <td v-if="book.status == '予定' && employeeId === 0" v-on:click="handleDeleteClick(book.id, $event)" class="delete"> × </td>
+              <td v-else-if="employeeId === 0" class="hyphen"> - </td>
+          </tr>
       </table>
       </div>
     </div>
