--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="main">
       <div v-for="(goal) in goals" class="goal">
-      <div class="goalName">目的：{{goal.goalName}}</div>    
+      <div class="goalName">目的：{{goal.goal_name}}</div>    
       <table class="booksTable">
           <tr class="tableHeader">
             <th>タイトル</th>
