--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <th>コメント</th>
             <th v-if="employeeId === 1">削除</th>
           </tr>
-          <tr v-for="(record) in goal.recordList" class="tableMain" v-on:click="handleRowClick(record.id)">
+          <tr v-for="(record) in goal.recordList" class="tableMain" v-on:click="handleRowClick(record.record_id)">
             <td class="booktd">{{ getBook(record.record_id) }}</td>
             <td><div class="bookStatus" :style="{backgroundColor:getColor(record.record_id)}">{{ getStatus(record.record_id) }}</div></td>
             <td>{{ getYear(record.record_id) }} 年目</td>
