スプリント３完了

--- a/book.html
+++ b/book.html
@@ -15,13 +15,13 @@
         <div  class="bookTitle"><h2> {{ book.title }}</h2>
         <div class="ListButtons">
         <div>
-          <button @click="toggleRegistration()"
+           <!-- <button @click="toggleRegistration()"
           class="toMyListButton" :class="{ 'registerDone': !canRegister }">
 
-          <!-- <button @click="canRegister ? registerList() : deleteRecord()"
-          class="toMyListButton" :class="{ 'registerDone': !canRegister }"> -->
+           <button @click="canRegister ? registerList() : deleteRecord()"
+          class="toMyListButton" :class="{ 'registerDone': !canRegister }"> 
             {{ registerButtonText }}
-          </button>
+          </button> -->
         </div>
 
         <div class="requestButtons">
